# WandaEnglishTeacherTauri

./: index.html  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/audio_capture/: audio_capture.rs  mod.rs
src-tauri/src/elevenlabs/: tts.rs
src-tauri/src/openai/: audio.rs  chat.rs  mod.rs
src-tauri/src/storage/: messages.rs
src-tauri/src/utils/: file.rs
src/components/: Controller.tsx  RecordIcon.tsx  RecordMessage.tsx  Title.tsx
